# Guidio

./: .gitignore  README.md  pyproject.toml
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/ai/: README.md  __init__.py  config.py  llm.py  main.py  models.py  orchestrator.py  tts.py  utils.py
backend/ai/prompt/: system.md  user.md
backend/ai/services/: __init__.py  llm.py  tts.py
backend/ai/test/: test_batch.py  test_describe.py
backend/app/: config.py  db.py  main.py  models.py  utils.py
backend/app/routes/: locations.py
backend/app/services/: database.py
backend/data/: README.md  pyproject.toml
backend/data/app/: models.py
backend/data/scripts/: all_entities.json  wikidata_entity_to_json.py
backend/scripts/: all_entities.json  analyze_breakpoints.py  clean_documents.py  import_parsed.py  parse_all_entities.py  seed_db_test_data.py
backend/scripts/parsed/: Q1025651.json  Q1026676.json  Q10418516.json  Q10430928.json  Q10431676.json  Q10438503.json  Q10466532.json  Q10467354.json  Q10502323.json  Q10502472.json  Q10511317.json  Q10512573.json  Q10542424.json  Q10546048.json  Q10547720.json  Q10550974.json  Q10551610.json  Q10552994.json  Q10561869.json  Q10577221.json  Q10591867.json  Q10602427.json  Q10604375.json  Q10604380.json  Q10614543.json  Q1063602.json  Q1065669.json  Q10667066.json  Q10667822.json  Q10671623.json  Q10671642.json  Q10676610.json  Q10679841.json  Q10680648.json  Q10680712.json  Q10680812.json  Q10681143.json  Q10681269.json  Q10682213.json  (+232 more)
backend/tests/: test_fetch_pois_by_category.py
(+1142 files in other folders)
