[project]
name = "guidio-data"
version = "0.1.0"
description = "Microservice that receives user location and returns nearby POIs from the internal database"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.1",
    "motor>=3.6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "dotenv>=0.9.9",
    "elevenlabs>=2.36.1",
    "openai>=2.21.0",
    "pydub>=0.25.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["."], include = ["app*"] }
