[project]
name = "guidio-data"
version = "0.1.0"
description = "Microservice that receives user location and returns nearby POIs from the internal database"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.1",
    "motor>=3.6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["."], include = ["app*"] }
